nginx/apex/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: default
  labels:
    app.kubernetes.io/name: nginx
    app.kubernetes.io/instance: nginx
spec:
  type: NodePort
  sessionAffinity: None
  selector:
    app.kubernetes.io/name: nginx
    app.kubernetes.io/instance: nginx
  ports:
    - name: http
      port: 80
      nodePort: 32000
      targetPort: http
